tests/negative/bad_enum_variant.sans
// expect-error: undefined
enum Color { Red, Green, Blue }
main() I {
  c = Color::Yellow
  0
}
